# FFL-Testing-with-hats

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  FFL-Testing.vcxproj  LICENSE  Makefile  Makefile.emscripten  Makefile.wut  README.md  build for windows.txt  build.sh  ffl-testing@.service  ffl-testing@.socket  go.sh  pack_body.py  run.sh
fs/code/: ffl_testing_2_debug.rpx  ffl_testing_2_debug.wuhb
fs/content/miitomo_shader_lut/: fresnelDefault02.tga  fresnelNone.tga  fresnelSkin01.tga  miitomo_lut_fres_r8_0  miitomo_lut_fres_r8_5  miitomo_lut_spec_r8_3  miitomo_lut_spec_r8_6  specularDefault02.tga  specularSkin01.tga
fs/content/models/: hat_3.glb  hat_9.glb  hat_bear.rmdl  mii_static_body0_BE.rmdl  mii_static_body0_LE.rmdl  mii_static_body1_BE.rmdl  mii_static_body1_LE.rmdl  mii_static_bodyn0_LE.rmdl  mii_static_bodyn1_LE.rmdl
fs/content/models/_original/body/3ds/: FemaleBody.glb  MaleBody.glb
fs/content/models/_original/body/fflbodyres/: Nose_3.glb  Nose_3.json  Nose_4.glb  Nose_4.json
fs/content/models/_original/body/miitomo/: FemaleBody.glb
fs/content/models/_original/body/studio/: MaleBody.glb
fs/content/models/_original/body/switch/: FemaleBody.glb  MaleBody.glb
fs/content/models/_original/hat/: hat_1.glb  hat_2.glb  hat_4.glb  hat_5.glb  hat_6.glb  hat_7.glb  hat_8.glb  hat_9.glb
fs/content/models/body/: mii_static_body_3ds_female_LE.rmdl  mii_static_body_3ds_male_LE.rmdl  mii_static_body_miitomo_female_LE.rmdl  mii_static_body_miitomo_male_LE.rmdl  mii_static_body_switch_female_LE.rmdl  mii_static_body_switch_male_LE.rmdl
fs/content/models/hat/: hat_1_LE.rmdl  hat_2_LE.rmdl  hat_3_LE.rmdl  hat_4_LE.rmdl  hat_5_LE.rmdl  hat_6_LE.rmdl  hat_7_LE.rmdl  hat_8_LE.rmdl  hat_9_LE.rmdl
fs/content/shaders/: FFLBodyShader.frag  FFLBodyShader.gsh  FFLBodyShader.vert  FFLShader.frag  FFLShader.vert  LUT.frag  LUT.vert  SampleShader.frag  SampleShader.vert  TransparentAdjuster.frag  TransparentAdjuster.vert  downsample_shader.frag  downsample_shader.vert  primitive_renderer.frag  primitive_renderer.vert  screen_shader_win.frag  static_body_image_shader.frag
include/: BodyModel.h  BodyTypeStrings.h  BodyTypes.h  EnumStrings.h  GLTFExportCallback.h  Hat.h  HatModel.h  HatTypeStrings.h  IShader.h  Model.h  PantsColor.h  RenderRequest.h  RenderTexture.h  RootTask.h  Shader.h  ShaderMiitomo.h  ShaderSwitch.h  Types.h  mii_ext_MiiPort.h
include/.pkg-config-path-dummy-for-makefile/: glu.pc
june-server-tests/: 2024-06-17-ffl-testing-faceonly-proto.py  2024-06-19-ffl-testing-faceonly-proto.py  2024-06-26-ffl-testing-faceonly-proto2.go  go.mod  go.sum  renderrequest-send.py
nwf body png/: convert pngs to rgba raw.sh
server-impl/: ffl-testing-render-request.py  ffl-testing-web-server-old.py  ffl-testing-web-server.go  go.mod
src/: .clangd  BodyModel.cpp  DataUtils.cpp  GLTFExportCallback.cpp  HatModel.cpp  Model.cpp  RenderTexture.cpp  RootTask.cpp  Shader-FFLShader.cpp  Shader.cpp  ShaderMiitomo.cpp  ShaderSwitch.cpp  main.cpp  tinygltf_impl.cpp
